--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.8",
+    "@google/genai": "^0.7.0",
     "@langchain/community": "^0.3.36",
     "@langchain/core": "^0.3.42",
     "@radix-ui/react-slot": "^1.1.2",
